[gd_scene load_steps=4 format=3 uid="uid://2tauxhsmqgbv"]

[ext_resource type="Script" uid="uid://mopjq2y6y16e" path="res://scripts/paused_menu.gd" id="1_ow8a3"]

[sub_resource type="Theme" id="Theme_jjjo5"]

[sub_resource type="Theme" id="Theme_ow8a3"]

[node name="PausedMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ow8a3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Wróć do gry" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_jjjo5")
text = "Wróć do gry"

[node name="Zapisz" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Zapisz"

[node name="Wczytaj" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Wczytaj"

[node name="Zakończ" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ow8a3")
text = "Zakończ"

[connection signal="pressed" from="VBoxContainer/Wróć do gry" to="." method="_on_wróć_do_gry_pressed"]
[connection signal="pressed" from="VBoxContainer/Zapisz" to="." method="_on_zapisz_pressed"]
[connection signal="pressed" from="VBoxContainer/Wczytaj" to="." method="_on_wczytaj_pressed"]
[connection signal="pressed" from="VBoxContainer/Zakończ" to="." method="_on_zakończ_pressed"]
